# Reviro-TechStart

./: Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  pytest.ini
attributes/: admin.py  models.py  serializers.py  urls.py  views.py
attributes/migrations/: 0001_initial.py  0002_initial.py
config/: exceptions.py  models.py  permissions.py  settings.py  urls.py
establishment/: models.py  serializers.py  urls.py  views.py
establishment/migrations/: 0001_initial.py
product/: models.py  serializers.py  urls.py  views.py
product/migrations/: 0001_initial.py
tests/: conftest.py  factories.py  test_establishment.py  test_product.py  test_users.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
